# stock-ex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test.yml  cmake-multi-platform.yml  memcheck.yml  memory-check.yml
analysis/: perf_analysis.ipynb
bench/: CMakeLists.txt  order_book_bench.cpp
cmake/: Libuv.cmake  Testing.cmake
example/: CMakeLists.txt  main.cpp
example/feed_handler/: feed_handler.cpp  feed_handler.hpp  market_data_decoder.hpp
example/order_gateway/: order_gateway.cpp  order_gateway.hpp  serializer.hpp
example/trading_engine/: feature_engine.hpp  liquidity_taker.cpp  liquidity_taker.hpp  market_maker.cpp  market_maker.hpp  market_order.hpp  market_order_book.cpp  market_order_book.hpp  om_order.hpp  order_manager.cpp  order_manager.hpp  position_keeper.hpp  risk_manager.hpp  trade_engine.cpp  trade_engine.hpp
example/trading_utils/: trading_utils.hpp
perf_analysis/: perf_analysis.ipynb
src/: CMakeLists.txt  common.cpp  engine_utils.cpp  engine_utils.hpp  main.cpp  matching_engine.cpp  matching_engine.hpp  order.hpp
src/engine/: common.hpp  matching_engine.cpp  matching_engine.hpp  message_handler.hpp  order.cpp  order_book.cpp  order_book.hpp  order_book_example.cpp
src/market_data/: market_data_encoder.hpp  market_data_publisher.cpp  market_data_publisher.hpp  snapshot_synthesizer.cpp  snapshot_synthesizer.hpp
src/models/: basic_types.hpp  client_request.hpp  client_response.hpp  constants.hpp  market_update.hpp  order.hpp
src/order_server/: fifo_sequencer.hpp  order_server.cpp  order_server.hpp  serializer.hpp
src/utils/: CMakeLists.txt  boost_test.cpp  lock_free_queue_example.cpp  logger.hpp  logger_example.cpp  memory_pool.hpp  memory_pool_example.cpp  thread_example.cpp  utils.hpp
test/: CMakeLists.txt  order_book_test.cpp  test.cpp
utils/: CMakeLists.txt  libuv_example.cpp  lock_free_queue.hpp  logger.hpp  memory_pool.hpp  memory_pool_example.cpp  poco_example.cpp  thread_example.cpp  utils.hpp
